updated alignment issues and tried different fonts. Also got my project divs correct

--- a/style.css
+++ b/style.css
@@ -1,40 +1,169 @@
+@viewport {
+    width: device-width ;
+    zoom: 1.0 ;
+  }
 
-html {background-image: url("monsteria.jpg"); padding: 100px;}
+html {
+    background-image: url("monsteria.jpg"); 
+    padding: 100px;
+}
 
-.body1 {background-color: #b9c097;
-    border: 10px solid #506f3a;font-family: 'Muli', sans-serif;display:block; }
+.body1 {
+    background-color: #dcdad5;
+    border: 10px ridge #4b6c43;
+    font-family: 'Muli', sans-serif;
+    display:block;
+    padding: 20px;
+    margin: 50px; 
+}
 
-.h1 {font-family: 'Muli', sans-serif; font-style: 50px;text-align: center;}
+.h1 {
+    font-family: 'Playfair Display SC', serif;
+    font-size: 3rem;
+    font-weight: bold;
+    text-decoration: underline;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 
-.h2 {font-family: 'Muli', sans-serif;font-size: 2rem;}
+}
 
-.p {font-family: 'Muli', sans-serif; border: 5px groove #7b887f;padding: 100px;margin: 100px;}
+header {
+    display: flex; 
+    padding: 40px;
+}
 
-header {display: flex; padding: 50px; justify-content: space-between;}
+.h2 {
+    font-family: 'Playfair Display SC', serif;
+    font-size: 2rem;
+    font-weight: bolder;
+    text-align: center;
+}
 
-.nav {font-family: 'Muli', sans-serif;font-style:10px #7b887f;display: flex;flex-direction: column;}
+.div1 {
+    font-family: 'Muli', sans-serif; 
+    display:block;
+    height: 300px;
+    width: 1000px;
+    border: #4b6c43 5px ridge;
+    padding: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
-footer {font-family: 'Muli', sans-serif;font: small-caption;margin: 30px; text-align: center; }
+}
+
+.p {
+    text-align: center;
+}
+
+.nav {
+    font-family: 'Muli', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.pic1 {
+    width: 100%;
+    height:100%;
+    display:flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+
+}
+/* project items */
+
+.flexcontainer {
+    display: flex;
+    justify-content: space-between;
+   flex-wrap: wrap;
+   margin-top: 15px;
+    
+}
+.flexitem1 {
+    display:flex;
+    border: #4b6c43 5px ridge;
+    width: 750px;
+    height: 200px;
+    padding: 5px;
+}
+.flexitem2 {
+    display:flex;
+    border: #4b6c43 5px ridge;
+    width: 750px;
+    height: 200px;
+    padding: 5px;
+}
+.flexitem3 {
+    display:flex;
+    border: #4b6c43 5px ridge;
+    width: 750px;
+    height: 200px;
+    padding: 5px;
+    margin-top: 5px;
+}
+.flexitem4 {
+    display:flex;
+    border: #4b6c43 5px ridge;
+    width: 750px;
+    height: 200px;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+ /*end of project items  */
+
+
+footer {
+    font-family: 'Muli', sans-serif;
+    font: small-caption;
+    margin: 30px; 
+    text-align: center;
+}
 
 /* say hello! css */
 
-.body2 {background-color: #b9c097;
-        border: 10px solid #506f3a;font-family: 'Muli', sans-serif; }
+.body2 {
+    display: block;
+    background-color: #dcdad5;
+    border: 10px solid #20392a;
+    font-family: 'Muli', sans-serif;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 50px;
+}
 
+.form {
+    font-family: 'Muli', sans-serif;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 2rem;
 
-.form {text-align: center;
-    font-family: 'Muli', sans-serif; }
+}
 
+.h3 {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    text-decoration-line: underline; 
+    font-family: 'Muli', sans-serif;
+    font-size: 5rem;
+
+}
     /* media quries */
-    
-    /*  Small devices (landscape phones, 576px and up) */
-    @media (min-width: 576px) {}
-    
-    /* Medium devices (tablets, 768px and up) */
-    @media (min-width: 768px) { }
-    
-    /*  Large devices (desktops, 992px and up) */
-    @media (min-width: 992px) {}
-    
-    /* Extra large devices (large desktops, 1200px and up) */
-    @media (min-width: 1200px) {}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
